# retri-evals

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: retrieval.py  synthetic_queries.py  udapdr_bootstrap.py  unsupervised_bootstrap.py
reps/evaluation/: indexed_task.py  mteb.py  mteb_tasks.py  retriever.py
reps/indexes/: indexing.py  qdrant_index.py  tantivy_index.py  test_qdrant.py  test_tantivy.py
reps/processing/: pipeline.py
retri_eval/bootstrap/: __init__.py  bootstrapper.py  evaluators.py  llm.py  prompts.py  synthetic_queries.py
retri_eval/datasets/: hard_negative_miner.py  llm.py  synthetic_queries.py  training_data.py  types.py
retri_eval/evaluation/: indexed_task.py  mteb_tasks.py  retriever.py
retri_eval/indexes/: indexing.py  manager.py  numpy_type.py  qdrant_index.py  usearch_index.py
retri_eval/processing/: basic_query_processor.py  beir_title_processor.py  pipeline.py
scripts/: create_mteb_tasks.py
test/: keys.bak  text.bak  text.dir
tests/: test_qdrant.py  test_usearch.py
